--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "react": "15.4.2",
     "react-native": "0.40.0",
+    "react-native-root-toast": "^1.0.3",
     "react-native-tab-navigator": "^0.3.3"
   },
   "devDependencies": {
