--- a/package.json
+++ b/package.json
@@ -7,16 +7,16 @@
     "test": "jest"
   },
   "dependencies": {
-    "react": "15.4.2",
-    "react-native": "0.40.0",
-    "react-native-root-toast": "^1.0.3",
+    "react": "16.0.0-alpha.6",
+    "react-native": "0.43.3",
+    "react-native-root-toast": "^1.0.5",
     "react-native-tab-navigator": "^0.3.3"
   },
   "devDependencies": {
-    "babel-jest": "18.0.0",
+    "babel-jest": "19.0.0",
     "babel-preset-react-native": "1.9.1",
-    "jest": "18.1.0",
-    "react-test-renderer": "15.4.2"
+    "jest": "19.0.2",
+    "react-test-renderer": "16.0.0-alpha.6"
   },
   "jest": {
     "preset": "react-native"
